Alignment fixes

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,12 +3,20 @@
     text-align: right
 }
 
+.updated-time-top-padding{
+    padding-top: 4px;
+}
+
+.day-switcher-bottom-padding{
+    padding-bottom: 25px;
+}
+
 .table-top-padding{
     padding-top: 1.5em;
 }
 
 .meals-header-top-padding{
-    padding-top: 5px;
+    padding-top: 4px;
 }
 
 .table-bottom-margin{
@@ -17,6 +25,10 @@
 
 .weight-graph-small-padding-bottom{
     padding-bottom: 1em;
+}
+
+.canvas-margin-top{
+    padding-top: 5px;
 }
 
 .graph-height-desktop{
